--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     <!-- Hero Section (Flexbox) -->
     <section class="hero">
         <div class="hero-text">
-
+            <h1>Welcome to the North Pole</h1>
+            <p>Santa is getting ready for Christmas!</p>
+            <button>Check Santa's Mood</button>
         </div>
 
         <div class="hero-image">
-
+            <img src="./images/santa.png">
         </div>
     </section>
 
@@ -36,7 +38,12 @@
         <h2>Santa's Workshop</h2>
 
         <div class="grid">
-
+            <div class="toys">🧸 Toys</div>
+            <div class="elves">🧝 Elves</div>
+            <div class="presents">🎁 Presents</div>
+            <div class="sleigh">🛷 Sleigh</div>
+            <div class="reindeer">🦌 Reindeer</div>
+            <div class="snow-machines">❄️ Snow Machines</div>
         </div>
     </section>
 
