--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class="nav">
         <h1>🎅 Santa Claus</h1>
         <nav class="nav-links">
-            <h2>Home</h2>
-            <h2>Workshop</h2>
-            <h2>Nice List</h2>
-            <h2>Contact</h2>
+            <a>Home</a>
+            <a>Workshop</a>
+            <a>Nice List</a>
+            <a>Contact</a>
         </nav>
     </header>
 
@@ -35,15 +35,15 @@
 
     <!-- Workshop Section (CSS Grid) -->
     <section class="workshop">
-        <h2>Santa's Workshop</h2>
+        <h2 class="center">Santa's Workshop</h2>
 
         <div class="grid">
-            <div class="toys">🧸 Toys</div>
-            <div class="elves">🧝 Elves</div>
-            <div class="presents">🎁 Presents</div>
-            <div class="sleigh">🛷 Sleigh</div>
-            <div class="reindeer">🦌 Reindeer</div>
-            <div class="snow-machines">❄️ Snow Machines</div>
+            <div class="border toys">🧸 Toys</div>
+            <div class="border elves">🧝 Elves</div>
+            <div class="border presents">🎁 Presents</div>
+            <div class="border sleigh">🛷 Sleigh</div>
+            <div class="border reindeer">🦌 Reindeer</div>
+            <div class="border snow-machines">❄️ Snow Machines</div>
         </div>
     </section>
 
