added rest.html button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="hero-text">
             <h1>Welcome to the North Pole</h1>
             <p>Santa is getting ready for Christmas!</p>
-            <button>Check Santa's Mood</button>
+            <button><a href="./rest.html">Check Santa's Mood</a></button>
         </div>
 
         <div class="hero-image">
